--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
